@@ -2,7 +2,7 @@
     "className": "Azzurro",
     "protocol": "RTU",
     "endianness": "BigEndian",
-    "errorLimitUntilNotReachable": 15,
+    "errorLimitUntilNotReachable": 3,
     "checkReachableRegister": "systemStatus",
     "enums": [
         {
