@@ -124,8 +124,22 @@ void IntegrationPluginAzzurro::setupThing(ThingSetupInfo *info)
         if (m_pvpower.contains(thing))
             m_pvpower.remove(thing);
 
+        if (m_pvEnergyProducedValues.contains(thing))
+            m_pvEnergyProducedValues.remove(thing);
 
-        AzzurroModbusRtuConnection *connection = new AzzurroModbusRtuConnection(hardwareManager()->modbusRtuResource()->getModbusRtuMaster(uuid), address, this);
+        if (m_energyConsumedValues.contains(thing))
+            m_energyConsumedValues.remove(thing);
+
+        if (m_energyProducedValues.contains(thing))
+            m_energyProducedValues.remove(thing);
+
+
+        AzzurroModbusRtuConnection *connection = new AzzurroModbusRtuConnection(hardwareManager()->modbusRtuResource()->getModbusRtuMaster(uuid), address, thing);
+        connect(info, &ThingSetupInfo::aborted, connection, [=](){
+            qCDebug(dcAzzurro()) << "Cleaning up ModbusRTU connection because setup has been aborted.";
+            connection->deleteLater();
+        });
+
         connect(connection, &AzzurroModbusRtuConnection::reachableChanged, this, [=](bool reachable){
             thing->setStateValue(azzurroInverterRTUConnectedStateTypeId, reachable);
 
@@ -144,11 +158,122 @@ void IntegrationPluginAzzurro::setupThing(ThingSetupInfo *info)
             }
 
             if (reachable) {
-                qCDebug(dcAzzurro()) << "Device" << thing << "is reachable via Modbus RTU on" << connection->modbusRtuMaster()->serialPort();
+                qCDebug(dcAzzurro()) << "Modbus RTU device " << thing << "connected on" << connection->modbusRtuMaster()->serialPort() << "is sending data.";
             } else {
-                qCWarning(dcAzzurro()) << "Device" << thing << "is not answering Modbus RTU calls on" << connection->modbusRtuMaster()->serialPort();
+                qCWarning(dcAzzurro()) << "Modbus RTU device " << thing << "connected on" << connection->modbusRtuMaster()->serialPort() << "is not responding.";
+                thing->setStateValue(azzurroInverterRTUCurrentPowerStateTypeId, 0);
+
+                if (!meterThings.isEmpty()) {
+                    meterThings.first()->setStateValue(azzurroMeterCurrentPowerStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterCurrentPhaseAStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterCurrentPhaseBStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterCurrentPhaseCStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterCurrentPowerPhaseAStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterCurrentPowerPhaseBStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterCurrentPowerPhaseCStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterVoltagePhaseAStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterVoltagePhaseBStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterVoltagePhaseCStateTypeId, 0);
+                    meterThings.first()->setStateValue(azzurroMeterFrequencyStateTypeId, 0);
+                }
+
+                if (!batteryThings.isEmpty()) {
+                    batteryThings.first()->setStateValue(azzurroBatteryCurrentPowerStateTypeId, 0);
+                    batteryThings.first()->setStateValue(azzurroBatteryChargingStateStateTypeId, "idle");
+                    batteryThings.first()->setStateValue(azzurroBatteryVoltageStateTypeId, 0);
+                    batteryThings.first()->setStateValue(azzurroBatteryCurrentStateTypeId, 0);
+                    batteryThings.first()->setStateValue(azzurroBatteryTemperatureStateTypeId, 0);
+                }
             }
         });
+
+
+        // Handle energy counters for inverter and meter. They get special treatment, because here we do outlier detection.
+        connect(connection, &AzzurroModbusRtuConnection::updateFinished, thing, [connection, thing, this](){
+
+            // Check for outliers. As a consequence of that, the value written to the state is not the most recent. It is several cycles old, depending on the window size.
+            if (m_pvEnergyProducedValues.contains(thing)) {
+                QList<float>& valueList = m_pvEnergyProducedValues.operator[](thing);
+                valueList.append(connection->pvGenerationTotal());
+                if (valueList.length() > m_windowLength) {
+                    valueList.removeFirst();
+                    uint centerIndex;
+                    if (m_windowLength % 2 == 0) {
+                        centerIndex = m_windowLength / 2;
+                    } else {
+                        centerIndex = (m_windowLength - 1)/ 2;
+                    }
+                    float testValue{valueList.at(centerIndex)};
+                    if (isOutlier(valueList)) {
+                        qCDebug(dcAzzurro()) << "Outlier check: the value" << testValue << " is an outlier. Sample window:" << valueList;
+                    } else {
+                        //qCDebug(dcAzzurro()) << "Outlier check: the value" << testValue << " is legit.";
+
+                        float currentValue{thing->stateValue(azzurroInverterRTUTotalEnergyProducedStateTypeId).toFloat()};
+                        if (testValue != currentValue) {    // Yes, we are comparing floats here! This is one of the rare cases where you can actually do that. Tested, works as intended.
+                            //qCDebug(dcAzzurro()) << "Outlier check: the new value is different than the current value (" << currentValue << "). Writing new value to state.";
+                            thing->setStateValue(azzurroInverterRTUTotalEnergyProducedStateTypeId, testValue);
+                        }
+                    }
+                }
+            }
+
+            Things meterThings = myThings().filterByParentId(thing->id()).filterByThingClassId(azzurroMeterThingClassId);
+            if (!meterThings.isEmpty()) {
+                if (m_energyConsumedValues.contains(thing)) {
+                    QList<float>& valueList = m_energyConsumedValues.operator[](thing);
+                    valueList.append(connection->energyPurchaseTotal());
+                    if (valueList.length() > m_windowLength) {
+                        valueList.removeFirst();
+                        uint centerIndex;
+                        if (m_windowLength % 2 == 0) {
+                            centerIndex = m_windowLength / 2;
+                        } else {
+                            centerIndex = (m_windowLength - 1)/ 2;
+                        }
+                        float testValue{valueList.at(centerIndex)};
+                        if (isOutlier(valueList)) {
+                            qCDebug(dcAzzurro()) << "Outlier check: the value" << testValue << " is an outlier. Sample window:" << valueList;
+                        } else {
+                            //qCDebug(dcAzzurro()) << "Outlier check: the value" << testValue << " is legit.";
+
+                            float currentValue{meterThings.first()->stateValue(azzurroMeterTotalEnergyConsumedStateTypeId).toFloat()};
+                            if (testValue != currentValue) {    // Yes, we are comparing floats here! This is one of the rare cases where you can actually do that. Tested, works as intended.
+                                //qCDebug(dcAzzurro()) << "Outlier check: the new value is different than the current value (" << currentValue << "). Writing new value to state.";
+                                meterThings.first()->setStateValue(azzurroMeterTotalEnergyConsumedStateTypeId, testValue);
+                            }
+                        }
+                    }
+                }
+
+                if (m_energyProducedValues.contains(thing)) {
+                    QList<float>& valueList = m_energyProducedValues.operator[](thing);
+                    valueList.append(connection->energySellingTotal());
+                    if (valueList.length() > m_windowLength) {
+                        valueList.removeFirst();
+                        uint centerIndex;
+                        if (m_windowLength % 2 == 0) {
+                            centerIndex = m_windowLength / 2;
+                        } else {
+                            centerIndex = (m_windowLength - 1)/ 2;
+                        }
+                        float testValue{valueList.at(centerIndex)};
+                        if (isOutlier(valueList)) {
+                            qCDebug(dcAzzurro()) << "Outlier check: the value" << testValue << " is an outlier. Sample window:" << valueList;
+                        } else {
+                            //qCDebug(dcAzzurro()) << "Outlier check: the value" << testValue << " is legit.";
+
+                            float currentValue{meterThings.first()->stateValue(azzurroMeterTotalEnergyProducedStateTypeId).toFloat()};
+                            if (testValue != currentValue) {    // Yes, we are comparing floats here! This is one of the rare cases where you can actually do that. Tested, works as intended.
+                                //qCDebug(dcAzzurro()) << "Outlier check: the new value is different than the current value (" << currentValue << "). Writing new value to state.";
+                                meterThings.first()->setStateValue(azzurroMeterTotalEnergyProducedStateTypeId, testValue);
+                            }
+                        }
+                    }
+                }
+            }
+        });
+
 
         // Handle property changed signals for inverter
         connect(connection, &AzzurroModbusRtuConnection::powerPv1Changed, thing, [this, thing](quint16 powerPv1){
@@ -170,11 +295,6 @@ void IntegrationPluginAzzurro::setupThing(ThingSetupInfo *info)
             setSystemStatus(thing, systemStatus);
         });
 
-        connect(connection, &AzzurroModbusRtuConnection::pvGenerationTotalChanged, thing, [thing](float totalEnergyProduced){
-            qCDebug(dcAzzurro()) << "Inverter total energy produced (pvGenerationTotal) changed" << totalEnergyProduced << "kWh";
-            thing->setStateValue(azzurroInverterRTUTotalEnergyProducedStateTypeId, totalEnergyProduced);
-        });
-
 
         // Meter
         connect(connection, &AzzurroModbusRtuConnection::activePowerPccChanged, thing, [this, thing](float currentPower){
@@ -183,22 +303,6 @@ void IntegrationPluginAzzurro::setupThing(ThingSetupInfo *info)
                 qCDebug(dcAzzurro()) << "Meter power (activePowerPcc) changed" << -currentPower << "W";
                 // Check if sign is correct for power to grid and power from grid.
                 meterThings.first()->setStateValue(azzurroMeterCurrentPowerStateTypeId, -currentPower);
-            }
-        });
-
-        connect(connection, &AzzurroModbusRtuConnection::energySellingTotalChanged, thing, [this, thing](float totalEnergyProduced){
-            Things meterThings = myThings().filterByParentId(thing->id()).filterByThingClassId(azzurroMeterThingClassId);
-            if (!meterThings.isEmpty()) {
-                qCDebug(dcAzzurro()) << "Meter total energy produced (energySellingTotal) changed" << totalEnergyProduced << "kWh";
-                meterThings.first()->setStateValue(azzurroMeterTotalEnergyProducedStateTypeId, totalEnergyProduced);
-            }
-        });
-
-        connect(connection, &AzzurroModbusRtuConnection::energyPurchaseTotalChanged, thing, [this, thing](float totalEnergyConsumed){
-            Things meterThings = myThings().filterByParentId(thing->id()).filterByThingClassId(azzurroMeterThingClassId);
-            if (!meterThings.isEmpty()) {
-                qCDebug(dcAzzurro()) << "Meter total energy consumed (energyPurchaseTotal) changed" << totalEnergyConsumed << "kWh";
-                meterThings.first()->setStateValue(azzurroMeterTotalEnergyConsumedStateTypeId, totalEnergyConsumed);
             }
         });
 
@@ -431,6 +535,12 @@ void IntegrationPluginAzzurro::setupThing(ThingSetupInfo *info)
         m_rtuConnections.insert(thing, connection);
         PvPower pvPower{};
         m_pvpower.insert(thing, pvPower);
+        QList<float> pvEnergyProducedList{};
+        m_pvEnergyProducedValues.insert(info->thing(), pvEnergyProducedList);
+        QList<float> energyConsumedList{};
+        m_energyConsumedValues.insert(info->thing(), energyConsumedList);
+        QList<float> energyProducedList{};
+        m_energyProducedValues.insert(info->thing(), energyProducedList);
         info->finish(Thing::ThingErrorNoError);
         return;
     }
@@ -501,6 +611,15 @@ void IntegrationPluginAzzurro::thingRemoved(Thing *thing)
     if (m_pvpower.contains(thing))
         m_pvpower.remove(thing);
 
+    if (m_pvEnergyProducedValues.contains(thing))
+        m_pvEnergyProducedValues.remove(thing);
+
+    if (m_energyConsumedValues.contains(thing))
+        m_energyConsumedValues.remove(thing);
+
+    if (m_energyProducedValues.contains(thing))
+        m_energyProducedValues.remove(thing);
+
     if (myThings().isEmpty() && m_pluginTimer) {
         hardwareManager()->pluginTimerManager()->unregisterTimer(m_pluginTimer);
         m_pluginTimer = nullptr;
@@ -535,4 +654,51 @@ void IntegrationPluginAzzurro::setSystemStatus(Thing *thing, AzzurroModbusRtuCon
             thing->setStateValue(azzurroInverterRTUSystemStatusStateTypeId, "Self Charging");
             break;
     }
+}
+
+// This method uses the Hampel identifier (https://blogs.sas.com/content/iml/2021/06/01/hampel-filter-robust-outliers.html) to test if the value in the center of the window is an outlier or not.
+// The input is a list of floats that contains the window of values to look at. The method will return true if the center value of that list is an outlier according to the Hampel
+// identifier. If the value is not an outlier, the method will return false.
+// The center value of the list is the one at (length / 2) for even length and ((length - 1) / 2) for odd length.
+bool IntegrationPluginAzzurro::isOutlier(const QList<float>& list)
+{
+    int const windowLength{list.length()};
+    if (windowLength < 3) {
+        qCWarning(dcAzzurro()) << "Outlier check not working. Not enough values in the list.";
+        return true;    // Unknown if the value is an outlier, but return true to not use the value because it can't be checked.
+    }
+
+    // This is the variable you can change to tweak outlier detection. It scales the size of the range in which values are deemed not an outlier. Increase the number to increase the
+    // range (less values classified as an outlier), lower the number to reduce the range (more values classified as an outlier).
+    uint const hampelH{3};
+
+    float const madNormalizeFactor{1.4826};
+    //qCDebug(dcAzzurro()) << "Hampel identifier: the input list -" << list;
+    QList<float> sortedList{list};
+    std::sort(sortedList.begin(), sortedList.end());
+    //qCDebug(dcAzzurro()) << "Hampel identifier: the sorted list -" << sortedList;
+    uint medianIndex;
+    if (windowLength % 2 == 0) {
+        medianIndex = windowLength / 2;
+    } else {
+        medianIndex = (windowLength - 1)/ 2;
+    }
+    float const median{sortedList.at(medianIndex)};
+    //qCDebug(dcAzzurro()) << "Hampel identifier: the median -" << median;
+
+    QList<float> madList;
+    for (int i = 0; i < windowLength; ++i) {
+        madList.append(std::abs(median - sortedList.at(i)));
+    }
+    //qCDebug(dcAzzurro()) << "Hampel identifier: the mad list -" << madList;
+
+    std::sort(madList.begin(), madList.end());
+    //qCDebug(dcAzzurro()) << "Hampel identifier: the sorted mad list -" << madList;
+    float const hampelIdentifier{hampelH * madNormalizeFactor * madList.at(medianIndex)};
+    //qCDebug(dcAzzurro()) << "Hampel identifier: the calculated Hampel identifier" << hampelIdentifier;
+
+    bool isOutlier{std::abs(list.at(medianIndex) - median) > hampelIdentifier};
+    //qCDebug(dcAzzurro()) << "Hampel identifier: the value" << list.at(medianIndex) << " is an outlier?" << isOutlier;
+
+    return isOutlier;
 }
