@@ -1,3 +1,9 @@
+nymea-plugins-modbus (1.7.007) buster focal jammy; urgency=medium
+
+* Azzurro: set states to 0 when not connected. Added outlier detection to energy counters.
+
+ -- Sebastian Ringer <s.ringer@consolinno.de> Thu, 18 Apr 2024 15:22:53 +0200
+
 nymea-plugins-modbus (1.7.006) buster focal jammy; urgency=medium
 
 * Kaco SunSpec: set inverter power state to 0 when not connected.
